# sgx-guard

./: CMakeLists.txt  Makefile  README.md
Client/: Makefile  app  enclave.token
Client/App/: App.cpp  Attester.cpp  Attester.h  Enclave_u.c  Enclave_u.h  RAClient.cpp  RAClient.h
Client/Enclave/: Enclave.cpp  Enclave.edl  Enclave.h  Enclave_t.c  Enclave_t.h
Server/: Makefile  app  enclave.token  ias_cert.pem
Server/App/: App.cpp  Enclave_u.c  Enclave_u.h  IASClient.cpp  IASClient.h  RAServer.cpp  RAServer.h  json.h
Server/Enclave/: Enclave.cpp  Enclave.edl  Enclave.h  Enclave_t.c  Enclave_t.h
Server/service_provider/: service_provider.cpp
Shared/: CmdParser.h  EnclaveLoader.cpp  EnclaveLoader.h  Socket.cpp  Socket.h
